--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cheerio": "^0.22.0",
     "express": "^4.15.2",
     "express-handlebars": "^3.0.0",
+    "handlebars": "^4.0.8",
     "mongoose": "^4.9.8",
     "request": "^2.81.0"
   }
