--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express-handlebars": "^3.0.0",
     "handlebars": "^4.0.8",
     "mongoose": "^4.9.8",
+    "morgan": "^1.8.1",
     "request": "^2.81.0"
   }
 }
